summer-jaeb/tests/compile_fail/strategy_without_retries.stderr
error: retry strategy attributes have no effect without `retries`; add `retries = N` or remove retry-related attributes
  --> tests/compile_fail/strategy_without_retries.rs:10:1
   |
10 | async fn on_event(event: &MyEvent) -> HandlerResult {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `jaeb::HandlerResult`
 --> tests/compile_fail/strategy_without_retries.rs:3:5
  |
3 | use jaeb::HandlerResult;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
